tmux: enabled tmux-zoom

--- a/tmux.conf
+++ b/tmux.conf
@@ -85,7 +85,7 @@ bind -n M-Down select-pane -D
 #
 # "Version 1.8 saw the addition of the -Z flag to resize-pane. With -Z, the active pane is toggled between zoomed (occupying the whole of the window) and unzoomed (its normal position in the layout). It's bound to tmux-prefix-z by default on my installation"
 # On early versions:
-# bind z run "~/tmux/tmux-zoom/tmux-zoom.sh"
+bind z run "~/tmux/tmux-zoom/tmux-zoom.sh"
 
 #
 # Using Mouse
