tmux: Ctrl+l clears terminal + tmux scrollback buffer

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,10 +5,12 @@ set -g prefix C-a
 # Ensure that we can send `Ctrl-a` to other apps.
 # bind C-a send-prefix
 
-# Reload the file with Prefix r.
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+# prefix+r: Reload config file
+bind r source-file ~/.tmux.conf \; display "Reloaded .tmux.conf!"
 
-#set -g history-limit 32768
+# C-l: Clear terminal and tmux scrollback buffer 
+bind -n C-l send-keys -R ENTER \; clear-history
+
 set -g history-limit 131072
 set -g update-environment "DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CLIENT SSH_CONNECTION WINDOWID XAUTHORITY"
 
