tmux: Sleeping between Ctrl+l and clear-history

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,8 +10,8 @@ bind r source-file ~/.tmux.conf \; display "Reloaded .tmux.conf!"
 
 # C-l: Clear terminal (sending Ctrl+l) and tmux scrollback buffer
 # (A sleep after send-keys may be needed in case clear via Ctrl+l is too slow)
-bind -n C-l send-keys C-l \; clear-history
-#bind -n C-l send-keys -R C-l \; run-shell "sleep .3s" \; clear-history
+#bind -n C-l send-keys C-l \; clear-history
+bind -n C-l send-keys -R C-l \; run-shell "sleep .3s" \; clear-history
 
 set -g history-limit 131072
 set -g update-environment "DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CLIENT SSH_CONNECTION WINDOWID XAUTHORITY"
