tmux: Added command to save all scrollback buffer to a file

--- a/tmux.conf
+++ b/tmux.conf
@@ -109,5 +109,10 @@ set-option -g mouse-resize-pane on
 #
 # Selection
 # 
+
+# Prefix+L: Print visible scrollback buffer to a file
 unbind L
-bind-key L capture-pane \; save-buffer $HOME/tmux-log.txt
+bind L capture-pane \; save-buffer $HOME/tmux-log.txt
+# Ctrl+p: Print to file: save all scrollback buffer to a file
+#                      (131072 is the history-limit)
+bind -n C-p command-prompt -p 'Save history to:' -I '~/tmux-history.log' 'capture-pane -S -131072 ; save-buffer %1 ; delete-buffer'
