tmux: Added key binding to log pane to a file

--- a/tmux.conf
+++ b/tmux.conf
@@ -100,19 +100,20 @@ bind z run "~/tmux/tmux-zoom/tmux-zoom.sh"
 #   mouse-select-window
 # the solution is to use the shift key. Hold down the shift key and then left click and drag across the target text. if you want to now paste the selected text back in toxterm, you must also hold down the shift key and then middle click in order to paste the text.
 
-#setw -g mode-mouse off
 setw -g mode-mouse on
 set-option -g mouse-select-window on
 set-option -g mouse-select-pane on
 set-option -g mouse-resize-pane on
 
 #
-# Selection
-# 
+# Log
+#
 
 # Prefix+L: Print visible scrollback buffer to a file
 unbind L
 bind L capture-pane \; save-buffer $HOME/tmux-log.txt
-# Ctrl+p: Print to file: save all scrollback buffer to a file
+# Pipe the current pane to a log file with Shift-h - Press Shift-h again to stop.
+bind H pipe-pane -o "cat >>$HOME/tmux_#S_#I-#W_#P.log" \; display-message "Toggled logging to: $HOME/tmux_#S_#I-#W_#P.log"
+# p for Print to file: save all scrollback buffer to a file
 #                      (131072 is the history-limit)
-bind -n C-p command-prompt -p 'Save history to:' -I '~/tmux-history.log' 'capture-pane -S -131072 ; save-buffer %1 ; delete-buffer'
+bind -n C-p command-prompt -p 'Save all history to:' -I '~/tmux-history_#S_#I-#W_$P.log' 'capture-pane -S -131072 ; save-buffer %1 ; delete-buffer'
