tmux: Fixed mistypo on default filename to save scrollback buffer

--- a/tmux.conf
+++ b/tmux.conf
@@ -116,4 +116,4 @@ bind L capture-pane \; save-buffer $HOME/tmux-log.txt
 bind H pipe-pane -o "cat >>$HOME/tmux_#S_#I-#W_#P.log" \; display-message "Toggled logging to: $HOME/tmux_#S_#I-#W_#P.log"
 # p for Print to file: save all scrollback buffer to a file
 #                      (131072 is the history-limit)
-bind -n C-p command-prompt -p 'Save all history to:' -I '~/tmux-history_#S_#I-#W_$P.log' 'capture-pane -S -131072 ; save-buffer %1 ; delete-buffer'
+bind -n C-p command-prompt -p 'Save all history to:' -I '~/tmux-history_#S_#I-#W_#P.log' 'capture-pane -S -131072 ; save-buffer %1 ; delete-buffer'
