[tmux] Update config according to version 2.6

--- a/tmux.conf
+++ b/tmux.conf
@@ -42,7 +42,6 @@ set -g visual-activity on
 #     highlighting current window using specified colour
 set-window-option -g window-status-current-bg yellow
 
-set -g status-utf8 on
 # set -g status-left-length 12
 
 #   Pane colors.
@@ -85,25 +84,10 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
 #
-#   Zooming: PREFIX+z
-#
-# "Version 1.8 saw the addition of the -Z flag to resize-pane. With -Z, the active pane is toggled between zoomed (occupying the whole of the window) and unzoomed (its normal position in the layout). It's bound to tmux-prefix-z by default on my installation"
-# On early versions:
-bind z run "~/tmux/tmux-zoom/tmux-zoom.sh"
-
-#
 # Using Mouse
 #
+set-option -g mouse on
 
-# In order to use the mouse to select text if one of these options is enabled
-#   mouse-select-pane
-#   mouse-select-window
-# the solution is to use the shift key. Hold down the shift key and then left click and drag across the target text. if you want to now paste the selected text back in toxterm, you must also hold down the shift key and then middle click in order to paste the text.
-
-setw -g mode-mouse on
-set-option -g mouse-select-window on
-set-option -g mouse-select-pane on
-set-option -g mouse-resize-pane on
 
 #
 # Log
