--- a/tmux.conf
+++ b/tmux.conf
@@ -40,7 +40,7 @@ set -g default-terminal "screen-256color"
 setw -g monitor-activity on
 set -g visual-activity on
 #     highlighting current window using specified colour
-set-window-option -g window-status-current-bg yellow
+set-window-option -g window-status-current-style bg=yellow
 
 # set -g status-left-length 12
 
